--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
     <nav class="navbar">
         <ul class="navbar-nav">
-          
           <li class="nav-item">
             <a href="#home" class="nav-link">
               <span class="link-text"><h3>Home</h3></span>
@@ -128,6 +127,11 @@
             </a>
           </li>
         </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+      </div>
     </nav>
 </body>
 </html>
