--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div id="cursor"></div>
     <nav class="navbar">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -123,7 +124,6 @@
                   ></path>
                 </g>
               </svg>
-              
             </a>
           </li>
         </ul>
@@ -133,5 +133,30 @@
           <span class="bar"></span>
       </div>
     </nav>
+    <main class="main">
+      <div id="top"></div>
+       <div class="container" id="home">
+
+       </div>
+       <div id="divider"></div>
+       <div class="container" id="about">
+
+      </div>
+      <div class="container" id="project">
+
+      </div>
+      <div id="divider"></div>
+      <div class="container" id="coding">
+
+      </div>
+      <div id="divider"></div>
+      <div class="container" id="skills">
+
+      </div>
+      <div id="divider"></div>
+      <div class="container" id="contact">
+
+      </div>
+    </main>
 </body>
 </html>
