home page design

--- a/index.html
+++ b/index.html
@@ -30,11 +30,6 @@
             </a>
           </li>
     
-          <li class="nav-item">
-            <a href="#coding" class="nav-link">
-              <span class="link-text"><h3>Coding</h3></span>
-            </a>
-          </li>
     
           <li class="nav-item">
             <a href="#skills" class="nav-link">
@@ -136,17 +131,25 @@
     <main class="main">
       <div id="top"></div>
        <div class="container" id="home">
-
+          <div class="heading">
+              <span class="animate">000.HOME</span>
+          </div>
+          <div class="home-box">
+           <div class="home-content">
+            <span>NAMASTE!</span>
+            <span>This is Aman Here</span>
+            <span>Welcome to my porfolio</span>
+           </div>
+           <div class="home-img">
+             <img src="pc.svg" alt="">
+           </div>
+          </div>
        </div>
        <div id="divider"></div>
        <div class="container" id="about">
 
       </div>
       <div class="container" id="project">
-
-      </div>
-      <div id="divider"></div>
-      <div class="container" id="coding">
 
       </div>
       <div id="divider"></div>
