except skills almost all completed

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <div id="top"></div>
        <div class="container" id="home">
           <div class="heading">
-              <span class="animate">000.HOME</span>
+              <span class="animate">000.Home</span>
           </div>
           <div class="home-box">
            <div class="home-content">
@@ -147,18 +147,102 @@
        </div>
        <div id="divider"></div>
        <div class="container" id="about">
-
-      </div>
+        <div class="heading">
+          <span class="animate">001.About</span>
+        </div>
+        <div class="about-content">
+          <p>I'm Justin Windle, a Creative Developer from London who likes to mix code, animation, interactivity and generative design. I work across the full JavaScript stack and have presented my work at conferences like Resonate and FITC. Formerly Google Creative Lab / Qwiki / FI. Currently Spotify.</p>
+        </div>
+       </div>
+       <div id="divider"></div>
       <div class="container" id="project">
-
+        <div class="heading">
+          <span class="animate">002.Project</span>
+        </div>
+        <div class="project-content">
+          <ul class="project-list">
+            <li class="list-head"><span class="srno">[000]</span><span>[Project-Name]</span><span>[Year]</span><span>[Link]</span></li>
+            <li><span class="srno">[001]</span><span>[Helping-Verb]</span><span>[2021]</span><span>[Link]</span></li>
+            <li><span class="srno">[002]</span><span>[Hackdoc]</span><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[2020]</span><span>[Link]</span></li>
+            <li><span class="srno">[003]</span><span>[5-&-Dime]</span><span>&nbsp;&nbsp;&nbsp;&nbsp;[2020]</span><span>[Link]</span></li>
+          </ul>
+        </div>
       </div>
       <div id="divider"></div>
       <div class="container" id="skills">
-
+        <div class="heading">
+          <span class="animate">003.Skills</span>
+        </div>
       </div>
       <div id="divider"></div>
       <div class="container" id="contact">
-
+        <div class="heading">
+          <span class="animate">004.Contact</span>
+        </div>
+        <div class="contact-content">
+          <span>Few clicks away from you, Let's connect</span>
+        </div>
+        <div class="contact-link">
+          <span><svg class="animate" class="icon"  viewBox="0 0 217 211" fill="none" >
+            <g id="icon">
+            <g id="logo">
+            <path id="Vector" d="M91.489 169.01C92.157 138.286 90.906 109.383 90.975 107.577C91.074 105.005 74.03 108.638 71.929 106.524C69.828 104.41 68.62 88.319 71.408 86.933C74.196 85.547 86.763 88.062 89.415 86.407C92.067 84.752 77.902 31.138 136.016 42.986C137.605 43.781 135.884 61.718 134.957 63.108C134.03 64.498 122.249 61.321 115.895 66.285C109.541 71.249 112.188 84.949 113.512 85.876C114.836 86.803 133.7 86.074 134.957 87.465C136.214 88.856 136.413 106.263 134.957 107.587C133.501 108.911 114.138 105.177 112.188 106.529C110.582 107.642 116.412 166.567 114.746 168.902C113.08 171.237 107.015 171.035 103.186 171.128" stroke="black" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+            </g>
+            <g id="circle">
+            <path id="Vector_2" d="M109.577 208.358C170.489 206.71 217.722 154.88 213.972 97.886C210.31 42.239 159.952 0.273997 105.049 2.133C49.39 4.017 2.02 50.605 2.68 106.555C4.229 193.998 88.185 209.165 91.88 208.106" stroke="black" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+            </g>
+            </g>
+            </svg></span>
+            &nbsp;&nbsp;&nbsp;
+            <span><svg class="animate" class="icon"  viewBox="0 0 208 202" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path id="logo" d="M106.164 199.986C170.081 196.429 214.831 147.929 203.423 83.486C194.135 31.016 142.701 -4.12699 90.684 2.90901C37.952 10.041 -2.60999 58.877 3.38601 112.004C9.07501 159.861 38.514 182.234 63.071 192.339C68.788 194.692 76.472 198.124 79.068 197.568C81.664 197.012 80.831 182.618 80.831 175.679C64.831 178.138 59.356 171.838 55.956 168.116C52.099 163.894 49.831 159.553 45.893 153.178C41.955 146.803 34.83 148.303 34.08 144.615C33.33 140.927 49.08 141.927 60.393 155.865C68.581 166.011 77.321 162.954 82.018 160.053C82.172 158.441 82.544 156.278 83.456 153.865C84.423 151.308 87.081 149.761 86.664 148.011C86.247 146.261 64.86 147.434 52.664 130.344C43.855 118 43.535 103.389 46.997 92.511C49.319 85.214 53.193 80.068 55.83 77.094C54.819 74.932 53.317 70.985 53.247 65.844C53.171 60.295 54.801 56.048 55.83 53.844C59.322 53.948 64.37 54.488 70.08 56.511C75.549 58.448 79.673 61.053 82.413 63.094C87.388 61.423 94.631 59.605 103.496 59.427C113.631 59.224 121.84 61.246 127.163 63.01C129.779 60.674 134.15 57.362 140.33 55.093C144.819 53.445 148.848 52.864 151.83 52.676C152.973 54.841 154.905 59.195 154.997 65.008C155.082 70.359 153.571 74.478 152.581 76.672C155.448 80.131 159.975 86.547 162.083 95.667C162.834 98.916 166.94 116.648 155.087 131.907C142.679 147.881 122.027 145.431 121.095 147.637C120.163 149.843 125.059 153.934 127.361 162.514C129.663 171.094 128.688 187.493 128.688 187.493" stroke="black" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg></span>
+            &nbsp;&nbsp;&nbsp;
+          <span><svg class="animate" class="icon" viewBox="0 0 216 213" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g id="icon">
+            <g id="logo">
+            <path id="Vector" d="M158.607 102.506C158.944 116.877 159.72 138.029 158 144C156.279 149.971 150.207 155.639 145.046 157.966C139.885 160.294 71.166 158.978 67.522 157.966C63.878 156.954 58.413 149.161 57.199 146.327C55.985 143.493 56.592 74.268 58.009 68.5C59.426 62.731 64.385 59.391 68.939 57.367C73.493 55.343 122.511 56.153 131.484 56.557C140.458 56.962 148.419 61.415 149.094 68.094C149.769 74.774 145.112 77.472 139.58 77C134.048 76.528 130.354 71.292 133.516 67.298C136.679 63.304 154.353 62.325 156.783 67.487C159.214 72.649 159.312 85.111 155.973 88.14C152.635 91.169 130.774 87.042 127.422 88.332C124.07 89.622 140.693 102.605 129.838 122.536C122.725 134.003 107.166 139.357 94.795 132.853C81.224 125.717 79.139 108.355 83.814 97.216C84.395 95.831 89.935 82.961 102.942 81.2C110.581 80.166 125.207 83.477 120.147 88.031C115.087 92.585 73.997 86.918 64.079 88.942" stroke="black" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+            </g>
+            <g id="out">
+            <path id="logo_2" d="M78.728 7.94699C20.574 26.142 -10.736 88.888 8.41402 142.7C27.111 195.239 87.004 221.882 139.319 205.123C192.355 188.133 225.226 130.393 209.334 76.743C183.999 -6.96401 99.089 1.33799 95.823 3.36399" stroke="black" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+            </g>
+            </g>
+            </svg>
+            </span>
+            &nbsp;&nbsp;&nbsp;
+          <span>
+            <svg class="animate" class="icon" viewBox="0 0 211 217" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g id="icon">
+              <g id="out">
+              <path id="Vector" d="M6.367 81.308C-8.888 140.302 27.866 200.022 83.676 212.173C138.167 224.037 192.417 187.242 205.808 133.964C219.384 79.953 187.705 21.55 133.753 6.71799C49.289 -15.965 11.505 60.527 11.501 64.37" stroke="black" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+              </g>
+              <g id="logo">
+              <path id="linkedin" d="M78.662 144.972C78.302 123.921 79.64 83.54 77.717 81.55C75.794 79.56 60.671 73.627 57.834 69.079C54.996 64.531 55.823 55.417 65.96 55.405C76.097 55.393 77.379 64.071 74.74 69.715C72.1 75.359 57.156 79.526 55.452 81.82C53.748 84.114 53.023 150.1 55.452 151.719C57.881 153.338 88.378 153.203 91.076 151.179C93.775 149.155 87.702 83.709 91.076 82.089C94.45 80.469 108.483 80.2 110.238 81.01C111.992 81.82 110.913 88.702 112.127 89.376C113.341 90.051 122.298 78.199 136.416 79.93C146.876 81.212 156.253 90.051 157.737 98.822C159.221 107.593 158.636 133.367 158.277 150.639C151.08 150.909 143.883 151.314 136.687 151.584C136.417 137.01 137.767 117.984 135.877 107.998C133.988 98.012 113.549 98.149 113.747 107.998C113.945 117.847 115.366 151.584 111.048 151.449" stroke="black" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+              </g>
+              </g>
+              </svg>
+              
+            </span>
+            &nbsp;&nbsp;&nbsp;
+          <span><svg class="animate" class="icon" viewBox="0 0 217 211" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g id="icon">
+            <g id="logo">
+            <path id="Vector" d="M63.122 79.336C67.936 90.034 103.597 121.237 106.985 121.416C110.373 121.595 165.647 72.026 164.042 68.638C162.437 65.25 52.246 64.18 49.214 67.568C46.183 70.956 47.252 145.665 49.927 147.805C52.602 149.945 161.01 150.123 163.328 146.379C165.646 142.635 168.142 88.965 165.111 85.756" stroke="black" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+            </g>
+            <g id="in">
+            <path id="Vector_2" d="M81.268 205.352C140.304 220.441 199.921 183.52 211.916 127.676C223.627 73.152 186.68 19.005 133.365 5.76398C79.315 -7.66002 21.002 24.183 6.32099 78.176C-16.126 162.703 60.472 200.273 64.315 200.266" stroke="black" stroke-width="4" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+            </g>
+            </g>
+            </svg>
+            </span>
+        </div>
+        <div class="resume-link">
+          <a href="">RESUME</a>
+        </div>
+        <div class="footer">
+         <span>Developed by <span style="color:rgb(255, 94, 0);">Aman Kumar Singh</span></span>
+         <span><a href="#top">Back to top</a></span>
+        </div>
       </div>
     </main>
 </body>
