--- a/index.html
+++ b/index.html
@@ -173,6 +173,118 @@
         <div class="heading">
           <span class="animate">003.Skills</span>
         </div>
+        <div class="skill">
+        <div class="type">
+          <span>Launguage</span>
+        </div>
+        <div class="list">
+           <div class="box">
+              <div class="circle">
+                 <div class="final" id="f1"></div>
+              </div>
+              <div class="content">
+                 <span>C++ and C</span>
+                 <span>90%</span>
+                 <span>3 Years</span>
+              </div>
+            </div>
+            <div class="box">
+            <div class="circle">
+              <div class="final" id="f2"></div>
+            </div>
+            <div class="content">
+              <span>JavaScript</span>
+              <span>70%</span>
+              <span>2 Years</span>
+            </div>
+            </div>
+            <div class="box">
+            <div class="circle">
+              <div class="final" id="f3"></div>
+            </div>
+            <div class="content">
+              <span>HTML and CSS</span>
+              <span>90%</span>
+              <span>3 Years</span>
+            </div>
+            </div>
+        </div>
+        </div>
+        <div class="skill">
+          <div class="type">
+            <span>Framework and Database</span>
+          </div>
+          <div class="list">
+            <div class="box">
+               <div class="circle">
+                  <div class="final" id="f1"></div>
+               </div>
+               <div class="content">
+                <span>ExpresJS</span>
+                <span>60%</span>
+                <span>1.5 Years</span>
+               </div>
+            </div>
+            <div class="box">
+             <div class="circle">
+               <div class="final" id="f2"></div>
+             </div>
+             <div class="content">
+              <span>NodeJS</span>
+              <span>70%</span>
+              <span>1.5 Years</span>
+             </div>
+            </div>
+           <div class="box">
+             <div class="circle">
+               <div class="final" id="f3"></div>
+             </div>
+             <div class="content">
+              <span>MongoDB</span>
+              <span>70%</span>
+              <span>1.5 Years</span>
+             </div>
+           </div>
+         </div>
+        </div>
+        <div class="skill">
+          <div class="type">
+            <span>Others</span>
+          </div>
+          <div class="list">
+            <div class="box">
+               <div class="circle">
+                  <div class="final" id="f1"></div>
+               </div>
+               <div class="content">
+                <span>DSA</span>
+                <span>90%</span>
+                <span>3 Years</span>
+               </div>
+            </div>
+            <div class="box">
+             <div class="circle">
+               <div class="final" id="f2"></div>
+             </div>
+             <div class="content">
+              <span>Algorithm</span>
+              <span>90%</span>
+              <span>3 Years</span>
+             </div>
+            </div>
+           <div class="box">
+             <div class="circle">
+               <div class="final" id="f3"></div>
+             </div>
+             <div class="content">
+              <span>Git</span>
+              <span>70%</span>
+              <span>1.5 Years</span>
+             </div>
+           </div>
+         </div>
+        </div>
+        
       </div>
       <div id="divider"></div>
       <div class="container" id="contact">
