--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
         <div class="skill">
         <div class="type">
-          <span>Launguage</span>
+          <span>[Launguage]</span>
         </div>
         <div class="list">
            <div class="box">
@@ -212,7 +212,7 @@
         </div>
         <div class="skill">
           <div class="type">
-            <span>Framework and Database</span>
+            <span>[Framework and Database]</span>
           </div>
           <div class="list">
             <div class="box">
@@ -249,7 +249,7 @@
         </div>
         <div class="skill">
           <div class="type">
-            <span>Others</span>
+            <span>[Others]</span>
           </div>
           <div class="list">
             <div class="box">
