--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>maskmanlucifer</title>
+    <title>maskmanaman</title>
     <script defer src="index.js"></script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="index.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -122,21 +123,16 @@
             </a>
           </li>
         </ul>
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-      </div>
     </nav>
     <main class="main">
       <div id="top"></div>
        <div class="container" id="home">
           <div class="heading">
-              <span class="animate">000.Home</span>
+              <span class="animate">000.Home 🏡</span>
           </div>
           <div class="home-box">
            <div class="home-content">
-            <span>NAMASTE!</span>
+            <span>NAMASTE! 🙏 </span>
             <span>This is Aman Here</span>
             <span>Welcome to my porfolio</span>
            </div>
@@ -148,16 +144,16 @@
        <div id="divider"></div>
        <div class="container" id="about">
         <div class="heading">
-          <span class="animate">001.About</span>
+          <span class="animate">001.About 🧑‍💻</span>
         </div>
         <div class="about-content">
-          <p>I'm Justin Windle, a Creative Developer from London who likes to mix code, animation, interactivity and generative design. I work across the full JavaScript stack and have presented my work at conferences like Resonate and FITC. Formerly Google Creative Lab / Qwiki / FI. Currently Spotify.</p>
+          <p>I'm Aman Kumar Singh, a 3rd year Computer Science undergraduate student  who enjoys problem solving and tries to craft something innovative. I have participated in multiple Hackathons and Coding Competitions.</p>
         </div>
        </div>
        <div id="divider"></div>
       <div class="container" id="project">
         <div class="heading">
-          <span class="animate">002.Project</span>
+          <span class="animate">002.Project 🗃</span>
         </div>
         <div class="project-content">
           <ul class="project-list">
@@ -171,7 +167,7 @@
       <div id="divider"></div>
       <div class="container" id="skills">
         <div class="heading">
-          <span class="animate">003.Skills</span>
+          <span class="animate">003.Skills 📑</span>
         </div>
         <div class="skill">
         <div class="type">
@@ -289,10 +285,10 @@
       <div id="divider"></div>
       <div class="container" id="contact">
         <div class="heading">
-          <span class="animate">004.Contact</span>
+          <span class="animate">004.Contact 💬</span>
         </div>
         <div class="contact-content">
-          <span>Few clicks away from you, Let's connect</span>
+          <span>Few clicks away from you, Let's connect 🤩</span>
         </div>
         <div class="contact-link">
           <span><svg class="animate" class="icon"  viewBox="0 0 217 211" fill="none" >
