--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
           <div class="home-box">
            <div class="home-content">
             <span>NAMASTE! 🙏 </span>
-            <span>This is Aman Here</span>
-            <span>Welcome to my porfolio</span>
+            <span>This is Aman Here 👋</span>
+            <span>Welcome to my porfolio 😇</span>
            </div>
            <div class="home-img">
              <img src="pc.svg" alt="">
@@ -147,7 +147,9 @@
           <span class="animate">001.About 🧑‍💻</span>
         </div>
         <div class="about-content">
-          <p>I'm Aman Kumar Singh, a 3rd year Computer Science undergraduate student  who enjoys problem solving and tries to craft something innovative. I have participated in multiple Hackathons and Coding Competitions.</p>
+          <p>I'm Aman Kumar Singh 👋, a 3rd year Computer Science 💻 undergraduate student  who enjoys problem solving 🛠 and tries to craft something innovative 💡. I have participated in multiple Hackathons 🚀 and Coding Competitions 🧩.
+            I have worked on multiple team 🎯 and solo projects 🧗.
+          </p>
         </div>
        </div>
        <div id="divider"></div>
@@ -158,9 +160,9 @@
         <div class="project-content">
           <ul class="project-list">
             <li class="list-head"><span class="srno">[000]</span><span>[Project-Name]</span><span>[Year]</span><span>[Link]</span></li>
-            <li><span class="srno">[001]</span><span>[Helping-Verb]</span><span>[2021]</span><span>[Link]</span></li>
-            <li><span class="srno">[002]</span><span>[Hackdoc]</span><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[2020]</span><span>[Link]</span></li>
-            <li><span class="srno">[003]</span><span>[5-&-Dime]</span><span>&nbsp;&nbsp;&nbsp;&nbsp;[2020]</span><span>[Link]</span></li>
+            <li><span class="srno">[001]</span><span>[Helping-Verb]</span><span>[2021]</span><span> <a href="https://github.com/luciferlabs/Helping-Verb">[Link]</a></span></li>
+            <li><span class="srno">[002]</span><span>[Hackdoc]</span><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[2020]</span><span><a href="https://github.com/maskmanlucifer/hackdoc">[Link]</a></span></li>
+            <li><span class="srno">[003]</span><span>[5-&-Dime]</span><span>&nbsp;&nbsp;&nbsp;&nbsp;[2020]</span><span><a href="https://github.com/maskmanlucifer/5-n-dime">[Link]</a></span></li>
           </ul>
         </div>
       </div>
