--- a/open-source.html
+++ b/open-source.html
@@ -130,8 +130,8 @@
         <span class="animate">Open-Source</span>
       </div>
     <div class="error-open-source">
-      <h1>Not any accepted PR till now 😥, But i am trying to contribute in open-source 👨‍💻 
-          and soon you might 🤞 see some mergerd PR list here 📑.
+      <h1>I don't have any merged PR till now 😥, But i am continiously trying to contribute in various projects 👨‍💻 
+          and soon you might 🤞 see some merged PR list here 📑.
       </h1>
     </div>
 
