--- a/project.html
+++ b/project.html
@@ -178,8 +178,8 @@
         <div class="card">
             <div class="pno">04</div>
             <div class="pdes">
-                <h2>Porfolio</h2>
-                <p>My portfolio using HTML/CSS/JS hosted on Github Pages.</p>
+                <h2>Portfolio</h2>
+                <p>My portfolio website using HTML/CSS/JS hosted on Github Pages.</p>
             </div>
             <div class="plink">
                 <a href="https://github.com/maskmanlucifer/portfolio">
@@ -193,7 +193,7 @@
             <div class="pno">05</div>
             <div class="pdes">
                 <h2>Virtual-Hub</h2>
-                <p>A chrome extension builded for attempting virtual contest on Codeforces.</p>
+                <p>A chrome extension built for attempting virtual contest on Codeforces.</p>
             </div>
             <div class="plink">
                 <a href="https://github.com/maskmanlucifer/Virtual_Hub">
