improved skill section

--- a/index.html
+++ b/index.html
@@ -230,18 +230,55 @@
           <span class="animate">003.Skills 📑</span>
         </div>
         <div class="skill">
+          <div class="type">
+            <span>Programming</span>
+          </div>
+          <div class="list">
+            <div class="box">
+               <div class="circle">
+                  <div class="final" id="f1"></div>
+               </div>
+               <div class="content">
+                <span>DSA</span>
+                <span>90%</span>
+                <span>3 Years</span>
+               </div>
+            </div>
+            <div class="box">
+             <div class="circle">
+               <div class="final" id="f1"></div>
+             </div>
+             <div class="content">
+              <span>Algorithm</span>
+              <span>90%</span>
+              <span>3 Years</span>
+             </div>
+            </div>
+           <div class="box">
+             <div class="circle">
+               <div class="final" id="f1"></div>
+             </div>
+             <div class="content">
+              <span>C and C++</span>
+              <span>90%</span>
+              <span>3 Years</span>
+             </div>
+           </div>
+         </div>
+        </div>
+        <div class="skill">
         <div class="type">
           <span>Launguage</span>
         </div>
         <div class="list">
            <div class="box">
               <div class="circle">
-                 <div class="final" id="f1"></div>
+                 <div class="final" id="f2"></div>
               </div>
               <div class="content">
-                 <span>C++ and C</span>
-                 <span>90%</span>
-                 <span>3 Years</span>
+                 <span>EJS</span>
+                 <span>70%</span>
+                 <span>2 Years</span>
               </div>
             </div>
             <div class="box">
@@ -250,13 +287,13 @@
             </div>
             <div class="content">
               <span>JavaScript</span>
-              <span>70%</span>
+              <span>75%</span>
               <span>2 Years</span>
             </div>
             </div>
             <div class="box">
             <div class="circle">
-              <div class="final" id="f3"></div>
+              <div class="final" id="f1"></div>
             </div>
             <div class="content">
               <span>HTML and CSS</span>
@@ -276,29 +313,29 @@
                   <div class="final" id="f2"></div>
                </div>
                <div class="content">
-                <span>ExpresJS</span>
-                <span>60%</span>
-                <span>1.5 Years</span>
+                <span>NodeJS</span>
+                <span>70%</span>
+                <span>2 Years</span>
                </div>
             </div>
             <div class="box">
              <div class="circle">
-               <div class="final" id="f1"></div>
+               <div class="final" id="f3"></div>
              </div>
              <div class="content">
-              <span>NodeJS</span>
-              <span>70%</span>
-              <span>1.5 Years</span>
+              <span>ReactJS</span>
+              <span>30%</span>
+              <span>0 Years</span>
              </div>
             </div>
            <div class="box">
              <div class="circle">
-               <div class="final" id="f3"></div>
+               <div class="final" id="f1"></div>
              </div>
              <div class="content">
               <span>MongoDB</span>
-              <span>70%</span>
-              <span>1.5 Years</span>
+              <span>80%</span>
+              <span>2 Years</span>
              </div>
            </div>
          </div>
@@ -310,12 +347,12 @@
           <div class="list">
             <div class="box">
                <div class="circle">
-                  <div class="final" id="f3"></div>
+                  <div class="final" id="f2"></div>
                </div>
                <div class="content">
-                <span>DSA</span>
-                <span>90%</span>
-                <span>3 Years</span>
+                <span>API</span>
+                <span>70%</span>
+                <span>2 Years</span>
                </div>
             </div>
             <div class="box">
@@ -323,9 +360,9 @@
                <div class="final" id="f2"></div>
              </div>
              <div class="content">
-              <span>Algorithm</span>
-              <span>90%</span>
-              <span>3 Years</span>
+              <span>web scraping</span>
+              <span>50%</span>
+              <span>1 Years</span>
              </div>
             </div>
            <div class="box">
@@ -334,8 +371,8 @@
              </div>
              <div class="content">
               <span>Git</span>
-              <span>70%</span>
-              <span>1.5 Years</span>
+              <span>85%</span>
+              <span>2 Years</span>
              </div>
            </div>
          </div>
@@ -398,9 +435,6 @@
           </a>
           </div>
           <div class="buttons">
-            <div class="resume-link">
-              <a id="button" href="https://drive.google.com/file/d/1t93NWKJq9JxFM5VnXwzcXCgvH8zmJ7Ex/view">RESUME</a>
-            </div>
             <div class="resume-link">
               <span id="button">maskmanaman@gmail.com</span> 
             </div>
