--- a/open-source.html
+++ b/open-source.html
@@ -136,7 +136,7 @@
       <div class="card">
           <div class="pno">01</div>
           <div class="pdes">
-              <h2>CFVIZ</h2>
+              <h2><a target="_blank" rel="noopener noreferrer" href="https://cfviz.netlify.app/">CFVIZ</a></h2>
               <p>Improved accuracy of codeforces visualizer tool by changing single user visualization algortihm</p>
           </div>
           <div class="plink">
