Made Experience Years Dynamic

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                <div class="content">
                 <span>DSA</span>
                 <span>90%</span>
-                <span>3 Years</span>
+                <span class="dsa-experience"></span>
                </div>
             </div>
             <div class="box">
@@ -251,7 +251,7 @@
              <div class="content">
               <span>Algorithm</span>
               <span>90%</span>
-              <span>3 Years</span>
+              <span class="algorithm-experience"></span>
              </div>
             </div>
            <div class="box">
@@ -261,7 +261,7 @@
              <div class="content">
               <span>C and C++</span>
               <span>90%</span>
-              <span>3 Years</span>
+              <span class="cpp-experience"></span>
              </div>
            </div>
          </div>
@@ -278,7 +278,7 @@
               <div class="content">
                  <span>EJS</span>
                  <span>70%</span>
-                 <span>2 Years</span>
+                 <span class="ejs-experience"></span>
               </div>
             </div>
             <div class="box">
@@ -288,7 +288,7 @@
             <div class="content">
               <span>JavaScript</span>
               <span>75%</span>
-              <span>2 Years</span>
+              <span class="js-experience"></span>
             </div>
             </div>
             <div class="box">
@@ -298,7 +298,7 @@
             <div class="content">
               <span>HTML and CSS</span>
               <span>90%</span>
-              <span>3 Years</span>
+              <span class="html-experience"></span>
             </div>
             </div>
         </div>
@@ -315,7 +315,7 @@
                <div class="content">
                 <span>NodeJS</span>
                 <span>70%</span>
-                <span>2 Years</span>
+                <span class="nodejs-experience"></span>
                </div>
             </div>
             <div class="box">
@@ -325,7 +325,7 @@
              <div class="content">
               <span>ReactJS</span>
               <span>30%</span>
-              <span>0 Years</span>
+              <span class="react-experience"></span>
              </div>
             </div>
            <div class="box">
@@ -335,7 +335,7 @@
              <div class="content">
               <span>MongoDB</span>
               <span>80%</span>
-              <span>2 Years</span>
+              <span class="mongo-experience"></span>
              </div>
            </div>
          </div>
@@ -352,7 +352,7 @@
                <div class="content">
                 <span>API</span>
                 <span>70%</span>
-                <span>2 Years</span>
+                <span class="api-experience"></span>
                </div>
             </div>
             <div class="box">
@@ -362,7 +362,7 @@
              <div class="content">
               <span>web scraping</span>
               <span>50%</span>
-              <span>1 Years</span>
+              <span class="scrapping-experience"></span>
              </div>
             </div>
            <div class="box">
@@ -372,7 +372,7 @@
              <div class="content">
               <span>Git</span>
               <span>85%</span>
-              <span>2 Years</span>
+              <span class="git-experience"></span>
              </div>
            </div>
          </div>
